--- a/app/components/navigation/navigation.component.html
+++ b/app/components/navigation/navigation.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg fixed-top mt-5">
-  <div class="container">
+<nav class="navbar navbar-expand-lg fixed-top mt-5 text-white">
+  <div class="container-fluid">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item nav-link">Work</li>
       <li class="nav-item nav-link">About</li>
