fix: background carousel to not fade into picture

--- a/app/components/heading/heading.composition.html
+++ b/app/components/heading/heading.composition.html
@@ -1,4 +1,6 @@
 <header class="masthead">
+  <div class="masthead mySlides" style="background: url(/assets/img/picture1.jpg)"></div>
+  <div class="masthead mySlides" style="background: url(/assets/img/picture2.jpg)"></div>
   <div class="intro-body">
     <div class="container">
       <div class="row">
